<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

        <LinearLayout
            android:id="@+id/intermediate_message"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/points_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/points_template_view"/>

                <TextView
                    android:id="@+id/personal_best_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/personal_best_template_view"/>

                <TextView
                    android:id="@+id/continue_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/continue_message"/>

                <LinearLayout
                    android:id="@+id/finished_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restart_button_text"
                        android:onClick="restart" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quit_to_menu_prompt"
                        android:onClick="backToMenu" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/game_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>

</RelativeLayout>