<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="24dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circular_shape_green"
        android:onClick="startGame"
        android:stateListAnimator="@null"/>

    <LinearLayout
        android:id="@+id/start_button_text"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="24dp"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game_button_text"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/instr_button"
        android:layout_below="@id/start_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        android:background="@drawable/circular_shape_yellow"
        android:onClick="viewInstructions"
        android:stateListAnimator="@null"/>

    <LinearLayout
        android:id="@+id/instr_button_text"
        android:layout_below="@id/start_button_text"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_button_text"
            android:textAllCaps="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/quit_button"
        android:layout_below="@id/start_button"
        android:layout_toRightOf="@id/instr_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/circular_shape"
        android:onClick="quitGame"
        android:stateListAnimator="@null" />

    <LinearLayout
        android:id="@+id/quit_button_text"
        android:layout_toRightOf="@id/instr_button_text"
        android:layout_below="@id/start_button_text"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit_button_text"
            android:textAllCaps="true"/>

    </LinearLayout>

</RelativeLayout>